fix(plugin-hdfsreader): read the parquet and orc files other engines write
why: the value decoding of both readers understood only what this project writes itself, and
     the format check built a parquet reader for every file while the job listed the path. a
     parquet timestamp was read as INT96 only and a decimal as a fixed length byte array only,
     the element type of a list came from the first value of the row, an orc type was looked up
     by its raw name, which broke `integer`, `long`, `tinyint`, `varchar(10)` and
     `array<string>` alike, and a file read without a column list failed on every tinyint,
     smallint and array column. one value the declared type cannot hold abandoned the rest of a
     parquet file, the reader that only needs the schema of a file was never closed, and an orc
     date was decoded through an instant in the default zone, a day early west of UTC.
what: resolve the columns of a file once instead of on every cell, and decode from the schema
      of the file: INT96 and INT64 timestamps in millis, micros and nanos, decimals in an
      int32, an int64 or a fixed byte array, the elements of a list and the values of a map
      from their own field, and a date as the calendar day it is. resolve the spellings the
      writer side accepts, aliases, parameters and generics included, and report a type or an
      index the file cannot serve while the columns are resolved rather than once per row.
      read the format from the four byte magic at both ends of a parquet file and from the orc
      and sequence magics, through the file status the listing already holds, without closing
      the shared file system and without opening every text file, tell the shape of a path from
      the type of the value, and drop the rc file type, whose reader left with the hive-exec
      dependency, from the supported types. `e2e/cases/260_hdfsreader_roundtrip` round trips
      parquet and ORC through the reader on `file:///` with the column t